--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,1 +1,21 @@
-<h1 style="text-align:center;margin: 25% auto 25% auto;">Coming Soon...</h1>
+<!doctype html>
+<title>Site Under Construction</title>
+<style>
+  body { text-align: center; padding: 20px; }
+  @media (min-width: 768px){
+    body{ padding-top: 150px; }
+  }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; max-width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
+
+<article>
+    <h1>Guven Business Group</h1>
+    <div>
+        <p>Site currently under construction. We will be online shortly!</p>
+        <p>&mdash; The Guven Business Group Team</p>
+    </div>
+</article>
