--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,9 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-        <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a>
+        <%= link_to :href=>"", :class=>"scrollto" do %>
+          <%= image_tag "logo.png", :alt=>"", :class=>"img-fluid" %>
+        <% end %>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
