--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Guvenbusinessgroup | <%= yield(:title) %></title>
     <%= csrf_meta_tags %>
 
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+
+    <!-- Favicons -->
+    <%= favicon_link_tag 'favicon.png', rel: 'icon'%>
+    <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon'%>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
+
+    <!-- Bootstrap CSS File -->
+    <!--<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+
+    <!-- Libraries CSS Files -->
+    <!-- <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+    <!--<link href="lib/animate/animate.min.css" rel="stylesheet"> -->
+    <!--<link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet"> -->
+    <!--<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
+    <!--<link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
+
+    <!-- Main Stylesheet File -->
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
+
+    <!-- =======================================================
+      Theme Name: NewBiz
+      Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
+      Author: BootstrapMade.com
+      License: https://bootstrapmade.com/license/
+    ======================================================= -->
   </head>
 
   <body>
       <%= render 'layouts/header' %>
-      <% flash.each do |key, value| %>
-        <div class="notification notice closeable alert alert-<%= key %>"><%= value %></div>
-      <% end %>
       <%= yield %>
       <%= render 'layouts/footer'%>
-      <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
