--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,22 +1,31 @@
 <% provide(:title, 'Under Construction') %>
 <!doctype html>
-<title>Site Under Construction</title>
-<style>
-  body { text-align: center; padding: 20px; }
-  @media (min-width: 768px){
-    body{ padding-top: 150px; }
-  }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; max-width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
+<head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+</head>
+<title>We're Launching Soon</title>
 
-<article>
-    <h1>Guven Business Group</h1>
-    <div>
-        <p>Site currently under construction. We will be online shortly!</p>
-        <p>&mdash; The Guven Business Group Team</p>
+<body>
+  <div id="container">
+  <div id="page-content">
+      <div id="left-grouping">
+        <%= image_tag('logo', id: "logo") %>
+        <div class="copy">Guven business group &copy; 2019 All Rights Reserved</div>
+      </div>
+      <div id="right-grouping">
+        <h1>Your Success Begins With Us</h1>
+        <h2>we're lanching soon</h2>
+        <div class="email-us">
+          <p>Ready to start your growth journey?</p>
+          <input id="email" placeholder= "Enter your email here" type="text"></input>
+          <%= link_to 'Notify Me', send_notify_mail_path, id: "notify", %>
+          <button id="notify">Notify Me!</button>
+        </div>
+      </div>
     </div>
-</article>
+  </div>
+</body>
