update landing appearance

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -15,6 +15,7 @@ html, body {
   -o-background-size: cover;
   background-size: cover;
   background-position: bottom, center;
+  height: 100vh;
 }
 
 
