Update mailer action

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -74,7 +74,7 @@ html, body {
     width: 100%;
   }
 
-  button#notify {
+  #notify {
     padding: 10px;
     background-color: #D2AC67;
     border: none;
