--- a/app/views/admin_mailer/notification_mail.html.erb
+++ b/app/views/admin_mailer/notification_mail.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>
-      New Sign Up from - <%= @email %>
+      New sign up from - <%= @email %>
     </p>
   </body>
 </html>
