--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,12 @@
   </head>
 
   <body>
+      <% flash.each do |key, value| %>
+        <div id="flash" class="flash-<%= key %>"><%= value %></div>
+      <% end %>
       <%= render 'layouts/header' %>
       <%= yield %>
       <%= render 'layouts/footer'%>
+      <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
