correct logo file ext

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -16,7 +16,7 @@
   <% end %>
   <div id="page-content">
       <div id="left-grouping">
-        <%= image_tag('logo', id: "logo") %>
+        <%= image_tag('logo.png', id: "logo") %>
         <div class="copy">Guven business group &copy; 2019 All Rights Reserved</div>
       </div>
       <div id="right-grouping">
