--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -106,7 +106,7 @@ html, body {
 
   .notification{
     font-family: Calibri, 'Trebuchet MS', sans-serif;
-    padding: 0 10px 0 10px;
+    padding: 10px 0 10px 0;
   }
 
 @media only screen and (min-width: 1920px){
