--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -12,6 +12,7 @@
 <body>
   <div id="container">
   <div id="page-content">
+      <div id="mob-logo"><%= image_tag('logo.png', id: "logo") %></div>
       <div id="left-grouping">
         <%= image_tag('logo.png', id: "logo") %>
         <div class="copy">Guven business group &copy; 2019 All Rights Reserved</div>
@@ -30,6 +31,7 @@
         <% end %>
         </div>
       </div>
+      <div id="mob-foot"><div class="copy">Guven business group &copy; 2019 All Rights Reserved</div></div>
     </div>
   </div>
 </body>
