--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -113,7 +113,7 @@ html, body {
     display: none;
   }
 
-@media only screen and (max-width: 1500px){
+@media only screen and (min-width: 100px) and (max-width: 1500px){
   #container {
     background: image-url("bg-dark.jpg") no-repeat;
   }
