--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -113,7 +113,21 @@ html, body {
     display: none;
   }
 
-@media only screen and (min-width: 100px) and (max-width: 1500px){
+@media only screen and (max-width: 1000px){
+  *{
+    font-size: 8pt;
+    margin-top: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    margin-bottom: 0.5em !important;
+    text-align: center;
+  }
+  .email-us{
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1500px){
   #container {
     background: image-url("bg-dark.jpg") no-repeat;
   }
@@ -144,7 +158,7 @@ html, body {
   }
 }
 
-@media only screen and (min-width: 1920px){
+@media only screen and (min-width: 1501px){
   #container {
     background: image-url("bg.png") no-repeat;
     -webkit-background-size: cover;
