--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -113,6 +113,21 @@ html, body {
     display: none;
   }
 
+@media only screen and (max-width: 370px){
+  *{
+    font-size: 13pt !important;
+  }
+  img{
+    height: 150px !important;
+  }
+  input{
+    height: 35px !important;
+    &::placeholder{
+      font-size: 12pt !important;
+    }
+  }
+}
+
 @media only screen and (max-width: 1000px){
   *{
     font-size: 8pt;
