correct viewport issue in safari

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
   <title>We're Launching Soon</title>
