--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -113,6 +113,9 @@ html, body {
   #mob-logo, #mob-foot {
     display: none;
   }
+  #mob-foot {
+    margin-top: 20px;
+  }
 
 
 
@@ -152,16 +155,13 @@ html, body {
     margin-top: 2.5em;
   }
   #mob-logo{
+    margin-bottom: 20px;
     img{
       height: 20em;
     }
   }
   #right-grouping, #mob-logo, #mob-foot, #left-grouping{
     font-size: 10px !important;
-    margin-top: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-    margin-bottom: 0.5em !important;
     text-align: center;
   }
   .email-us{
@@ -172,9 +172,6 @@ html, body {
 @media only screen and (max-width: 500px){
   #right-grouping, #mob-logo, #left-grouping{
     font-size: 8px !important;
-  }
-  #mob-foot{
-    display: none;
   }
 }
 
