--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -22,45 +22,50 @@ html, body {
 
 #page-content {
   display: flex;
+  flex-direction: column;
   width: 100vw;
-  margin-bottom: 1.2em;
+  height: 100%;
 }
 
-#left-grouping {
-  margin-top: 2.1em;
-  flex-basis: 30%;
+#top-grouping {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  #logo {
-    width: 60%;
+  flex-direction: row;
+  margin-top: 1.2rem;
+  .logo-box{
+    display:flex;
+    flex-basis: 30%;
+    justify-content: center;
   }
-}
-
-#right-grouping {
-  margin-top: 2.1em;
-  flex-basis: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 1.5em;
+  #logo {
+    width: 80%;
+    flex: 0 0 auto;
+    align-self: center;
+  }
+  .head-text{
+    display:flex;
+    flex-direction: column;
+    flex-basis: 30%;
+  }
   h1 {
-    flex-basis: 10%;
-    font-size: 4.5em;
+    font-size: 4.2rem;
     line-height: 1em;
     font-weight: 330;
     text-transform: uppercase;
-    margin-top: 1.1em;
-    margin-bottom: 1.1em;
   }
 
   h2 {
-    flex-basis: 15%;
     font-weight: 300;
-    font-size: 3.5em;
-    flex-grow: 2;
+    font-size: 3.3em;
+    margin-top: auto;
   }
+}
+
+#bottom-grouping {
+  display: flex;
+  flex-grow: 1;
+  justify-content: end;
+  align-items: flex-end;
+  margin-bottom: 3rem;
 }
 
   input#email {
@@ -96,9 +101,13 @@ html, body {
   .copy{
     font-weight: 300;
     font-size: 0.8em;
+    margin-top:auto;
+    flex-basis: 30%;
+    text-align: center;
   }
   .email-us{
     font-size: medium;
+    margin-top: auto;
     input::placeholder {
       font-size: 1.1em;
     }
@@ -131,6 +140,10 @@ html, body {
 
 @media only screen and (max-width: 1000px){
   .copy{
+    display: none;
+  }
+  #mob-foot .copy{
+    display: block;
     font-size: 1.2em;
   }
   #container {
@@ -141,13 +154,14 @@ html, body {
     justify-content: center;
     align-items: center;
   }
-  #right-grouping{
+  #bottom-grouping{
     margin:0;
     flex-basis: initial;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
-  #left-grouping{
+  #top-grouping{
     display:none;
   }
   #mob-logo, #mob-foot{
@@ -162,17 +176,18 @@ html, body {
       height: 20em;
     }
   }
-  #right-grouping, #mob-logo, #mob-foot, #left-grouping{
+  #bottom-grouping, #mob-logo, #mob-foot, #top-grouping{
     font-size: 10px !important;
     text-align: center;
   }
   .email-us{
+    margin-top: 0;
     width: 80%;
   }
 }
 
 @media only screen and (max-width: 500px){
-  #right-grouping, #mob-logo, #left-grouping{
+  #bottom-grouping, #mob-logo, #top-grouping{
     font-size: 8px !important;
   }
 }
